  or Stata (Josh Errickson).
* `pairmatch` and `fullmatch` no longer generate "matched.distances" attributes
   for their results. To get this information, use `matched.distances`.
* (Internal) methods for sorting of InfinitySparseMatrix's
* Fixed Rcpp incompatibilities for some OSX users (4bbcaca), various minor issues
  affecting package development and deployment (#110,...).

CHANGES IN OPTMATCH VERSION 0.9-5
* Documentation adjustments.
* Explicit print method for output from explicit calls to `stratumStructure`.

CHANGES IN OPTMATCH VERSION 0.9-4

* Significant speed up of math operations for sparse distance objects
  (by Josh Buckner).
* Introducing `contr.match_on`, a new default contrasts function for
  making Mahalanobis and Euclidean distances. Previously we used R
  defaults, which (a) generated different answers for the same factor
  depending on the ordering of the levels and (b) led to different
  distances for {0,1}-valued numeric variables and two level
  factors. (#80)
* match_on now takes strata as element of formula. Now users can write:
    match_on(z ~ x1 + x2 + strata(exactMatchVar))
  Instead of
    match_on(z ~ x1 + x2, within = exactMatch(z ~ exactMatchVar))
* Fixed bug giving spurious infeasibility warnings, sample size
  reductions when using `fullmatch` with feasible combinations of
  `min.controls`, `mean.controls`/`max.controls` and `max.controls`
  (#92)
* Various small bug fixes and documentation improvements.

CHANGES IN OPTMATCH VERSION 0.9-3

* Fixed memory issues, potential segfaults in solver code. (Thank
  you, Peter Solenberger).
* Fixed bug in dropping cases with extraneous NAs when using
  `fullmatch` or `pairmatch` to create distance specifications
  directly.
* Fixed bug (#83) in `glm` method for `match_on` that caused
  observations with fixable NAs to be dropped too often.
* New function `distUnion` allows combining arbitrary distance
  specifications.
* New function `antiExactMatch` provides for matches that may only